--- a/package.json
+++ b/package.json
@@ -10,5 +10,15 @@
     "kafka"
   ],
   "author": "\"Cinemataztic\"",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@kafkajs/confluent-schema-registry": "^3.6.1",
+    "exponential-backoff": "^3.1.2",
+    "node-rdkafka": "^3.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^9.20.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "prettier-eslint": "^16.3.0"
+  }
 }
