--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A wrapper around node-rdkafka",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000 --detectOpenHandles --forceExit"
   },
   "keywords": [
     "kafka"
@@ -18,6 +18,12 @@
     "node-rdkafka": "^3.2.1"
   },
   "devDependencies": {
-    "prettier": "^3.5.1"
+    "@testcontainers/kafka": "^10.18.0",
+    "avsc": "^5.7.7",
+    "axios": "^1.7.9",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.1",
+    "testcontainers": "^10.18.0"
   }
 }
