--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A wrapper around node-rdkafka",
   "main": "src/index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --testTimeout=5000 --detectOpenHandles --forceExit"
+    "test:ci": "cross-env NODE_ENV=test jest --ignoreProjects system --testTimeout=5000 --detectOpenHandles --forceExit"
   },
   "keywords": [
     "kafka"
@@ -18,11 +18,8 @@
     "node-rdkafka": "^3.2.1"
   },
   "devDependencies": {
-    "@testcontainers/kafka": "^10.18.0",
-    "axios": "^1.7.9",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "prettier": "^3.5.1",
-    "testcontainers": "^10.18.0"
+    "prettier": "^3.5.1"
   }
 }
