--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -27,13 +24,14 @@ jobs:
           - 9092:9092
         env:
           KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-          KAFKA_LISTENER_SECURITY_PROTOCOL: PLAINTEXT
-          KAFKA_LISTENER_NAME_INTERNAL: INTERNAL
-          KAFKA_LISTENER_INTERNAL_HOST: kafka
-          KAFKA_LISTENER_INTERNAL_PORT: 9092
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT://kafka:9092
+          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
           KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-        options: --health-cmd="kafka-topics --bootstrap-server kafka:9092 --list || exit 1" --health-interval=10s --health-timeout=5s --health-retries=5    
+        options: >
+          --health-cmd="kafka-topics --bootstrap-server kafka:9092 --list || exit 1" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=5
 
       schema-registry:
         image: confluentinc/cp-schema-registry:latest
@@ -43,11 +41,15 @@ jobs:
           SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka:9092
           SCHEMA_REGISTRY_HOST_NAME: schema-registry
           SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
-        options: --health-cmd="curl -s http://localhost:8081/subjects" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: >
+          --health-cmd="curl -s http://localhost:8081/subjects" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=3
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@master
+      - uses: actions/setup-node@v3
         with:
           node-version: 20.14.0
           cache: "npm"
@@ -55,13 +57,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Deploy 'cinemataztic-value' avro schema to schema-registry service
+      - name: Deploy 'cinemataztic-value' Avro schema to Schema Registry
         run: |
           echo '{
             "schema": "{\"type\":\"record\",\"name\":\"HelloCinemataztic\",\"fields\":[{\"name\":\"message\",\"type\":\"string\"}]}"
           }' > schema.json
 
-          echo "Deploying 'cinemataztic-value' avro schema to schema-registry"
+          echo "Deploying 'cinemataztic-value' Avro schema to Schema Registry..."
           curl -X POST -H "Content-Type: application/vnd.schemaregistry.v1+json" --data @schema.json http://localhost:8081/subjects/cinemataztic-value/versions
 
       - name: Run tests
