--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,20 +26,23 @@ jobs:
         ports:
           - 9092:9092
         env:
-          KAFKA_ZOOKEEPER_CONNECT: localhost:2181
-          KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+          KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+          KAFKA_LISTENER_SECURITY_PROTOCOL: PLAINTEXT
+          KAFKA_LISTENER_NAME_INTERNAL: INTERNAL
+          KAFKA_LISTENER_INTERNAL_HOST: kafka
+          KAFKA_LISTENER_INTERNAL_PORT: 9092
           KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-        options: --health-cmd="kafka-topics --bootstrap-server localhost:9092 --list || exit 1" --health-interval=10s --health-timeout=5s --health-retries=5    
+        options: --health-cmd="kafka-topics --bootstrap-server kafka:9092 --list || exit 1" --health-interval=10s --health-timeout=5s --health-retries=5    
 
       schema-registry:
         image: confluentinc/cp-schema-registry:latest
         ports:
           - 8081:8081
         env:
-          SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://localhost:9092
-          SCHEMA_REGISTRY_HOST_NAME: localhost
-          SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: localhost:2181
+          SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka:9092
+          SCHEMA_REGISTRY_HOST_NAME: schema-registry
+          SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
         options: --health-cmd="curl -s http://localhost:8081/subjects" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
